traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: traefik:v3
          args:
            - --providers.kubernetesgateway
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
          ports:
            - containerPort: 80
            - containerPort: 443
      hostNetwork: true
      serviceAccountName: traefik
